--- a/index.html
+++ b/index.html
@@ -1,49 +1,83 @@
 <!DOCTYPE html>
 <html>
-    <head>
-      <title>Example</title>
-      <meta name="viewport" content="width=device-width, initial-scale=1">
 
-      <!-- Do not add `link` tags unless you know what you are doing -->
-      <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
+<head>
+  <title>Example</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
 
-      <!-- Do not add `script` tags unless you know what you are doing -->
-      <script src="public/vendor.js" type="text/javascript" charset="utf-8" defer></script>
-      <script src="public/application.js" type="text/javascript" charset="utf-8" defer></script>
-    </head>
-    <body class="container-fluid">
-      <h1>Example</h1>
-      <div class="container">
-        <div class="row article">
-          <div class="col-md-8 box">.col-md-8</div>
-          <div class="col-md-4 box">.col-md-4</div>
+  <!-- Do not add `link` tags unless you know what you are doing -->
+  <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
+
+  <!-- Do not add `script` tags unless you know what you are doing -->
+  <script src="public/vendor.js" type="text/javascript" charset="utf-8" defer></script>
+  <script src="public/application.js" type="text/javascript" charset="utf-8" defer></script>
+</head>
+
+<body class="container-fluid">
+  <h1>Example</h1>
+  <div class="container">
+    <div class="row article">
+      <div class="col-md-8 box">.col-md-8</div>
+      <div class="col-md-4 box">.col-md-4</div>
+    </div>
+
+    <!-- Stack the columns on mobile by making one full-width and the other half-width -->
+    <div class="row">
+      <div class="col-xs-12 col-md-8 box">.col-xs-12 .col-md-8</div>
+      <div class="col-xs-6 col-md-4 box">.col-xs-6 .col-md-4</div>
+    </div>
+
+    <!-- Columns start at 50% wide on mobile and bump up to 33.3% 6wide on desktop -->
+    <div class="row">
+      <div class="col-xs-6 col-md-4 box">.col-xs-6 .col-md-4</div>
+      <div class="col-xs-6 col-md-4 box">.col-xs-6 .col-md-4</div>
+      <div class="col-xs-6 col-md-4 box">.col-xs-6 .col-md-4</div>
+    </div>
+
+    <!-- Columns are always 50% wide, on mobile and desktop -->
+    <div class="row">
+      <div class="col-xs-6 box">.col-xs-6</div>
+      <div class="col-xs-6 box">.col-xs-6</div>
+    </div>
+  </div>
+  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure
+    dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+  <div class="container">
+    <div class="row">
+      <div class="col-md-4 box">first: .col-md-4</div>
+      <div class="col-md-4 box">second: .col-md-4</div>
+      <div class="col-md-4 box">third: .col-md-4</div>
+    </div>
+  </div>
+
+  <button type="button" class="btn btn-primary btn-lg" data-toggle="modal" data-target="#example">
+  Launch demo modal
+  </button>
+
+  <div class="modal fade" id="example" tabindex="-1" role="dialog">
+    <div class="modal-dialog" role="document">
+      <div class="modal-content">
+        <div class="modal-header">
+          <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+          <h4 class="modal-title">Modal title</h4>
         </div>
-
-        <!-- Stack the columns on mobile by making one full-width and the other half-width -->
-        <div class="row">
-          <div class="col-xs-12 col-md-8 box">.col-xs-12 .col-md-8</div>
-          <div class="col-xs-6 col-md-4 box">.col-xs-6 .col-md-4</div>
+        <div class="modal-body">
+          <p>One fine body&hellip;</p>
         </div>
-
-        <!-- Columns start at 50% wide on mobile and bump up to 33.3% 6wide on desktop -->
-        <div class="row">
-          <div class="col-xs-6 col-md-4 box">.col-xs-6 .col-md-4</div>
-          <div class="col-xs-6 col-md-4 box">.col-xs-6 .col-md-4</div>
-          <div class="col-xs-6 col-md-4 box">.col-xs-6 .col-md-4</div>
-        </div>
-
-        <!-- Columns are always 50% wide, on mobile and desktop -->
-        <div class="row">
-          <div class="col-xs-6 box">.col-xs-6</div>
-          <div class="col-xs-6 box">.col-xs-6</div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+          <button type="button" class="btn btn-primary">Save changes</button>
         </div>
       </div>
-      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
-      eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad
-      minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex
-      ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate
-      velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat
-      cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id
-      est laborum.</p>
-    </body>
+      <!-- /.modal-content --><div class="input-group">
+      <span class="input-group-addon" id="basic-addon1">@</span>
+      <input type="text" class="form-control" placeholder="Username" aria-describedby="basic-addon1">
+    </div>
+    </div>
+    <!-- /.modal-dialog -->
+  </div>
+  <!-- /.modal -->
+
+</body>
+
 </html>
